# walrus-ai-policy

./: .gitignore  CONTRIBUTING.md  README.md
.github/: copilot-instructions.md
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Dockerfile.graphql  Dockerfile.indexer
backend/db/: Cargo.toml
backend/db/src/: ai.rs  lib.rs
backend/graphql/: Cargo.toml  Dockerfile  railway.toml
backend/graphql/src/: db.rs  loaders.rs  main.rs  schema.rs
backend/indexer/: Cargo.toml  Dockerfile  railway.toml
backend/indexer/migrations/2024-01-01-000000_initial/: down.sql  up.sql
backend/indexer/migrations/2026-03-26-000001_perf_tables/: down.sql  up.sql
backend/indexer/migrations/2026-03-26-000002_platform_stats/: up.sql
backend/indexer/migrations/2026-03-30-000003_contributor/: down.sql  up.sql
backend/indexer/migrations/2026-03-30-000004_artifact_stats/: down.sql  up.sql
backend/indexer/migrations/2026-04-01-000005_artifact_unique_views/: down.sql  up.sql
backend/indexer/migrations/2026-04-02-000006_artifact_file_hash/: down.sql  up.sql
backend/indexer/migrations/2026-04-03-000007_latest_artifact_tracking/: down.sql  up.sql
backend/indexer/migrations/2026-04-07-000008_ai_search/: down.sql  up.sql
backend/indexer/migrations/2026-04-09-000009_search_quality/: down.sql  up.sql
backend/indexer/src/: lib.rs  main.rs
backend/indexer/src/ai/: extractor.rs  mod.rs  openrouter.rs  worker.rs
backend/indexer/src/db/: models.rs  schema.rs
backend/indexer/src/events/: mod.rs
backend/indexer/src/processors/: artifact_processor.rs  contributor_processor.rs  mod.rs
contract/: .gitignore  Move.toml  logs.txt
contract/sources/: artifact.move  contributor.move  file.move  metadata.move
docs/: DATA_MODEL.md  DESIGN_SYSTEM.md  PRD.md  SYSTEM_ARCHITECTURE.md  SYSTEM_DESIGN.md
frontend/: .env.example  Dockerfile  codegen.ts  components.json  eslint.config.ts  nginx.conf  package.json  pnpm-lock.yaml  railway.toml  react-router.config.ts  sui-codegen.config.ts  tsconfig.json  vite.config.ts
frontend/app/: root.tsx  window.d.ts
frontend/app/components/Center/: index.tsx
frontend/app/components/ConnectWalletWrapper/: index.tsx
frontend/app/components/Flex/: index.tsx
frontend/app/components/Hstack/: index.tsx
frontend/app/components/Jazzicon/: index.tsx
frontend/app/components/Markdown/: index.tsx
frontend/app/components/SEO/: index.tsx
frontend/app/components/Spinner/: index.tsx
frontend/app/components/Stack/: index.tsx
frontend/app/components/TransactionDetail/: index.tsx
frontend/app/components/Typography/: index.tsx
frontend/app/components/Vstack/: index.tsx
frontend/app/components/ui/: badge.tsx  button.tsx  checkbox.tsx  dialog.tsx  drawer.tsx  pagination.tsx  popover.tsx  skeleton.tsx  sonner.tsx  tooltip.tsx
frontend/app/hook/: useArtifact.ts  useClickOutside.ts  useClipboard.ts  useDebounce.ts  useDownloadFile.ts  useGetConfig.ts  useGetFileByPatchId.ts  useMount.ts  useSignAndExecuteTransaction.ts  useSteps.ts  useSuiNs.ts  useUploadArtifact.ts  useUploadQuilt.ts  useUtf8Bytes.ts  useWalBalance.ts
frontend/app/layout/Artifact/: ArtifactContributors.tsx  ArtifactFiles.tsx  ArtifactHeader.tsx  ArtifactReadme.tsx  ArtifactStatistic.tsx  ArtifactVersions.tsx  index.tsx
frontend/app/layout/Artifact/ArtifactContributors/: ArtifactContributorsAddRole.tsx  ArtifactContributorsCard.tsx  ArtifactContributorsRemoveRole.tsx  index.tsx
frontend/app/layout/Artifact/ArtifactFile/: ArtifactFileCSV.tsx  ArtifactFileList.tsx  ArtifactFileMarkdown.tsx  ArtifactFilePreview.tsx  ArtifactFileSVG.tsx
frontend/app/layout/Artifact/ArtifactHeader/: index.tsx
frontend/app/layout/Artifact/ArtifactRelease/: ArtifactReleaseAuthorization.tsx  ArtifactReleaseDocument.tsx  index.tsx  (+2 more)
frontend/app/layout/Create-Artifact/: index.tsx
frontend/app/layout/CreateArtifact/: index.tsx
frontend/app/layout/Header/: index.tsx
frontend/app/layout/Home/: index.tsx
frontend/app/layout/Provider/: ProviderDappkit.tsx  ProviderReactQuery.tsx
frontend/app/routes/: _index.tsx  artifact.$blobId.tsx  artifact.$id.tsx  create-artifact.tsx
frontend/app/services/graphql-app/: generated.ts  index.ts  query.ts
frontend/app/services/graphql-sui/: generated.ts  index.ts  query.ts
frontend/app/utils/: index.tsx  utils.constants.ts  utils.dapp-kit.ts  utils.sui.ts  utils.walrus.ts
frontend/public/css/: index.css
(+44 files in other folders)
