[workspace]
members = ["db", "indexer", "graphql"]
resolver = "2"

[workspace.dependencies]
archive-db = { path = "db" }

sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui.git", branch = "testnet" }
sui-types = { git = "https://github.com/MystenLabs/sui.git", branch = "testnet" }

anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
clap = { version = "4.4", features = ["derive", "env"] }
diesel = { version = "2.2", features = ["postgres", "chrono", "serde_json"] }
diesel-async = { version = "0.5", features = ["postgres", "bb8"] }
diesel_migrations = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
bcs = "0.1"
hex = "0.4"
dotenvy = "0.15"

async-graphql = { version = "7", features = ["tracing", "chrono", "dataloader"] }
axum = "0.8"
pgvector      = { version = "0.4", features = ["diesel", "postgres"] }
reqwest       = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-openai  = { version = "0.34", features = ["embedding", "chat-completion"] }
