[package]
name = "archive-graphql"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "archive-graphql"
path = "src/main.rs"

[dependencies]
archive-db.workspace = true
anyhow.workspace = true
async-graphql.workspace = true
async-graphql-axum = "7"
axum.workspace = true
chrono.workspace = true
clap.workspace = true
diesel.workspace = true
diesel-async.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http = { version = "0.6", features = ["cors"] }
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
